backend/api-pos/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-pos
  namespace: backend
spec:
  selector:
    app.kubernetes.io/name: api-pos
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
