backend/api-pos/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: api-pos
  namespace: backend
spec:
  ingressClassName: traefik
  rules:
  - host: api-pos.adiatma.tech
    http:
      paths:
      - backend:
          service:
            name: api-pos
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api-pos.adiatma.tech
    secretName: api-pos.adiatma.tech
